@@ -646,7 +646,7 @@ MagickExport Image *ReadImage(const ImageInfo *image_info,
       next->magick_columns=next->columns;
     if (next->magick_rows == 0)
       next->magick_rows=next->rows;
-    if ((next->colorspace == sRGBColorspace) || (next->gamma == 1.0))
+    if ((next->colorspace == sRGBColorspace) && (next->gamma == 1.0))
       next->colorspace=RGBColorspace;
     value=GetImageProperty(next,"tiff:Orientation");
     if (value == (char *) NULL)
