@@ -1,4 +1,10 @@
-2012-02-06  6.7.5-4 Cristy  <quetzlzacatenango@image...>
+2012-02-12  6.7.5-5 Cristy  <quetzlzacatenango@image...>
+  * New version 6.7.5-5, SVN revision 6834.
+
+2012-02-12  6.7.5-5 Cristy  <quetzlzacatenango@image...>
+  * Only use the canvas size of the very first frame of a GIF image sequence.
+
+2012-02-11  6.7.5-4 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.5-4, SVN revision 6824.
 
 2012-02-08  6.7.5-4 Cristy  <quetzlzacatenango@image...>
